Initial UnixSocket implementation for IPC events, so it can be bidirectional
So we can send events like "request for view tree nodes and view properties" for external debuggers

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,6 +35,8 @@ korlibs-inject = { module = "com.soywiz:korlibs-inject", version.ref = "korlibs"
 korlibs-template = { module = "com.soywiz:korlibs-template", version.ref = "korlibs" }
 korlibs-time = { module = "com.soywiz:korlibs-time", version.ref = "korlibs" }
 korlibs-serialization = { module = "com.soywiz:korlibs-serialization", version.ref = "korlibs" }
+korlibs-datastructure = { module = "com.soywiz:korlibs-datastructure", version.ref = "korlibs" }
+korlibs-datastructure-core = { module = "com.soywiz:korlibs-datastructure-core", version.ref = "korlibs" }
 jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson" }
 jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jackson" }
 junit = { module = "junit:junit", version.ref = "junit" }
