More work on IPC events

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,6 +37,8 @@ korlibs-time = { module = "com.soywiz:korlibs-time", version.ref = "korlibs" }
 korlibs-serialization = { module = "com.soywiz:korlibs-serialization", version.ref = "korlibs" }
 korlibs-datastructure = { module = "com.soywiz:korlibs-datastructure", version.ref = "korlibs" }
 korlibs-datastructure-core = { module = "com.soywiz:korlibs-datastructure-core", version.ref = "korlibs" }
+korlibs-memory = { module = "com.soywiz:korlibs-memory", version.ref = "korlibs" }
+korlibs-io-stream = { module = "com.soywiz:korlibs-io-stream", version.ref = "korlibs" }
 jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson" }
 jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jackson" }
 junit = { module = "junit:junit", version.ref = "junit" }
