--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -22,7 +22,7 @@ env:
 
 jobs:
   publish:
-    runs-on: macos-11
+    runs-on: macos-latest
     steps:
       - { name: Checkout, uses: actions/checkout@v3 }
       - { name: Use Node.js 20.x, uses: actions/setup-node@v3, with: { node-version: 20.x } }
