Update gradle.properties with configureondemand and configuration-cache

--- a/gradle.properties
+++ b/gradle.properties
@@ -59,9 +59,6 @@ kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
 
 org.gradle.daemon=true
 #org.gradle.caching=true
-#org.gradle.configureondemand=true
-#org.gradle.unsafe.configuration-cache=true
-#org.gradle.unsafe.configuration-cache-problems=warn
 
 # https://kotlinlang.org/docs/whatsnew17.html#a-new-approach-to-incremental-compilation
 kotlin.incremental.useClasspathSnapshot=true
@@ -76,3 +73,7 @@ org.gradle.parallel=true
 enableMFVC=false
 
 kotlin.mpp.applyDefaultHierarchyTemplate=false
+
+org.gradle.configureondemand=true
+org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache-problems=warn
