--- a/gradle.properties
+++ b/gradle.properties
@@ -74,6 +74,6 @@ enableMFVC=false
 
 kotlin.mpp.applyDefaultHierarchyTemplate=false
 
-org.gradle.configureondemand=true
-org.gradle.unsafe.configuration-cache=true
-org.gradle.unsafe.configuration-cache-problems=warn
+#org.gradle.configureondemand=true
+#org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache-problems=warn
