Enable org.gradle.caching

--- a/gradle.properties
+++ b/gradle.properties
@@ -58,7 +58,6 @@ kotlin.native.ignoreDisabledTargets=true
 kotlin.mpp.androidSourceSetLayoutVersion1.nowarn=true
 
 org.gradle.daemon=true
-#org.gradle.caching=true
 
 # https://kotlinlang.org/docs/whatsnew17.html#a-new-approach-to-incremental-compilation
 kotlin.incremental.useClasspathSnapshot=true
@@ -77,3 +76,5 @@ kotlin.mpp.applyDefaultHierarchyTemplate=false
 #org.gradle.configureondemand=true
 #org.gradle.unsafe.configuration-cache=true
 #org.gradle.unsafe.configuration-cache-problems=warn
+org.gradle.caching=true
+
