Try to fix e2e test

--- a/e2e/e2e-test/buildSrc/settings.gradle
+++ b/e2e/e2e-test/buildSrc/settings.gradle
@@ -1,10 +1,16 @@
 pluginManagement {
-    Eval.xy(this, it, file('../../../gradle/repositories.settings.gradle').text)
+    repositories {
+        //Eval.xy(this, it, file('../../../gradle/repositories.settings.gradle').text)
+        mavenLocal()
+        mavenCentral()
+        google()
+        gradlePluginPortal()
+    }
 }
 dependencyResolutionManagement {
     versionCatalogs {
         libs {
-            from(files("../../../gradle/libs.versions.toml"))
+            //from(files("../../../gradle/libs.versions.toml"))
         }
     }
 }
