--- a/e2e/e2e-test/settings.gradle
+++ b/e2e/e2e-test/settings.gradle
@@ -1,3 +1,9 @@
 pluginManagement {
-    Eval.xy(this, it, file('../../gradle/repositories.settings.gradle').text)
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        google()
+        gradlePluginPortal()
+    }
+    //Eval.xy(this, it, file('../../gradle/repositories.settings.gradle').text)
 }
