--- a/e2e/e2e-test/buildSrc/build.gradle
+++ b/e2e/e2e-test/buildSrc/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "org.jetbrains.kotlin.jvm" version libs.versions.kotlin
+    id "org.jetbrains.kotlin.jvm" version "2.0.20"
 }
 
 repositories {
@@ -7,10 +7,10 @@ repositories {
     mavenCentral()
     google()
 }
-Eval.xy(this, this, file("../../../gradle/repositories.settings.gradle").text)
+//Eval.xy(this, this, file("../../../gradle/repositories.settings.gradle").text)
 
 dependencies {
-    implementation("com.soywiz.korlibs.korim:korim-jvm:3.0.0")
+    implementation("com.soywiz:korlibs-image:6.0.0")
     //implementation("korlibs.korim:korim-jvm:3.4.0")
     //implementation("korlibs.korim:korim-jvm:999.0.0.999")
 }
